force-app/main/default/objects/Transaction__c/fields/Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>Account_Balance__c</fullName>
    <description>&quot;The minimum or maximum amount that the account reached in a particular period
US-4409
US-4456
US-4425&quot;</description>
    <inlineHelpText>This is the minimum or maximum amount that the account reached in a particular period</inlineHelpText>
    <label>Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>