force-app/main/default/objects/Transaction__c/fields/Account_OD_Limit__c.field-meta.xml
<CustomField>
    <fullName>Account_OD_Limit__c</fullName>
    <description>&quot;The limit on the client&apos;s account for the said period
US-4409
US-4456
US-4425&quot;</description>
    <inlineHelpText>This is the  limit on the client&apos;s account for the said period</inlineHelpText>
    <label>Account OD Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>