force-app/main/default/objects/Transaction__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Unique customer number
Salesforce field name is different from the api name
US-4409
US-4456
US-4425</description>
    <inlineHelpText>Unique customer number</inlineHelpText>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>