force-app/main/default/objects/Transaction__c/fields/Creditor__c.field-meta.xml
<CustomField>
    <fullName>Creditor__c</fullName>
    <description>&quot;Debtor - person/entity that cash is being paid to
NB: Data for creditor and debtor is received in the same field/column from Proact
US-4409
US-4456
US-4425&quot;</description>
    <inlineHelpText>Debtor - person/entity that cash is being paid to</inlineHelpText>
    <label>Creditor / Debtor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>