force-app/main/default/objects/Transaction__c/fields/Flag_Pos_Trans_Amt__c.field-meta.xml
<CustomField>
    <fullName>Flag_Pos_Trans_Amt__c</fullName>
    <description>Negative/ Positive flag</description>
    <label>Flag Pos Trans Amt</label>
    <length>1</length>
    <type>Text</type>
</CustomField>