force-app/main/default/objects/Transaction__c/fields/Inflow_Outflow_Type__c.field-meta.xml
<CustomField>
    <fullName>Inflow_Outflow_Type__c</fullName>
    <description>This field will serve as one of the filters for 2 reports: Inflow by narrative and Outflow by narrative
US-4456</description>
    <formula>IF(ISPICKVAL( Transaction_Type__c , &quot;Inflow/Outflow&quot;), IF( Transaction_Amount__c &gt; 0, &quot;Inflow&quot;, &quot;Outflow&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inflow Outflow Type</label>
    <type>Text</type>
</CustomField>