force-app/main/default/objects/Transaction__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>Last day of month for the period
&quot;The 12-month period that is being reported on
US-4409
US-4456
US-4425&quot;</description>
    <inlineHelpText>Last day of month for the period
The 12-month period that is being reported on</inlineHelpText>
    <label>Period</label>
    <type>Date</type>
</CustomField>