force-app/main/default/objects/Transaction__c/fields/Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Amount__c</fullName>
    <description>&quot;Amount that is being credited/debited on the client&apos;s account
NB: Data for creditor and debtor amount is received in the same field/column from Proact
US-4409
US-4456
US-4425&quot;</description>
    <inlineHelpText>This is the amount that is being credited/debited on the client&apos;s account
This is the amount that is flowing in or out of the client&apos;s account</inlineHelpText>
    <label>Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>