force-app/main/default/objects/Transaction__c/fields/Transaction_Count__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Count__c</fullName>
    <description>&quot;Number of times that the account has been credited/debited over the last 6 months
NB: Data for creditor and debtor amount is received in the same field/column from Proact
US-4409
US-4456
US-4425&quot;</description>
    <inlineHelpText>This is the number of times that the account has been credited/debited</inlineHelpText>
    <label>Transaction Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>