force-app/main/default/objects/Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>This field help to differentiate transaction summary and outflows/inflows
US-4456</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Balances/Cash Flow</fullName>
            </value>
            <value>
                <fullName>Inflow/Outflow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>